--- a/index.html
+++ b/index.html
@@ -22,6 +22,24 @@
     <title>Landing page</title>
 </head>
 <body>
+  <header class="header">
+    <div class="container">
+      <div class="header-container">
+        <div class="header-left">
+          <div class="header-logo">
+            <img src="./img/logo.svg" alt="logo" class="header__img">
+          </div>
+          <div class="header-left__text">
+            <a href="tel:" class="header__text">+7 (910) 000-00-00</a>
+            <a href="#contact" class="header__text">Москва, МКАД, 33-й км, вл1, стр1</a>
+          </div>
+        </div>
+        <div class="header-right">
+          <button class="header__button btn">ОБРАТНЫЙ ЗВОНОК</button>
+        </div>
+      </div>
+    </div>
+  </header>
     <script src="./libs/jquery.min.js"></script>
     <script src="./libs/masked-input.min.js"></script>
     <script src="./libs/fancybox.min.js"></script>
