--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       href="./css/desk-style.css"
       media="(min-width: 1025px)"
     />
-    <title>Landing page</title>
+    <title>Chery</title>
 </head>
 <body>
   <header class="header">
@@ -40,6 +40,14 @@
       </div>
     </div>
   </header>
+  <section class="main-banner section">
+    <div class="container">
+      <div class="section__upper">
+        <h1 class="main-banner__title">СНИЖАЕМ ЦЕНЫ НА CHERY</h1>
+        <h3 class="main-banner__sub-title">ФИНАЛЬНАЯ АКЦИЯ НА АВТО В НАЛИЧИИ</h3>
+      </div>
+    </div>
+  </section>
     <script src="./libs/jquery.min.js"></script>
     <script src="./libs/masked-input.min.js"></script>
     <script src="./libs/fancybox.min.js"></script>
