--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   </header>
   <section class="main-banner section">
     <div class="container">
-      <div class="section__upper">
+      <div class="main-banner__upper">
         <h1 class="main-banner__title">СНИЖАЕМ ЦЕНЫ НА CHERY</h1>
         <h3 class="main-banner__sub-title">ФИНАЛЬНАЯ АКЦИЯ НА АВТО В НАЛИЧИИ</h3>
       </div>
@@ -66,8 +66,8 @@
                 <div class="count-line progress-days"></div>
                 <div class="count-round">
                     <svg viewBox="0 0 64 64" class="pie">
-                        <circle class="background" r="25%" cx="50%" cy="50%"></circle>
-                        <circle class="chart chart-days" r="25%" cx="50%" cy="50%" stroke-dasharray="100 100"></circle>
+                        <circle class="background" r="50%" cx="50%" cy="50%"></circle>
+                        <circle class="chart chart-days" r="50%" cx="50%" cy="50%" stroke-dasharray="100 100"></circle>
                     </svg>
                 </div>
             </div>
@@ -76,8 +76,8 @@
                 <span class="time-count__text">часов</span>
                 <div class="count-round">
                     <svg viewBox="0 0 64 64" class="pie">
-                        <circle class="background" r="25%" cx="50%" cy="50%"></circle>
-                        <circle class="chart chart-hours" r="25%" cx="50%" cy="50%" stroke-dasharray="100 100"></circle>
+                        <circle class="background" r="50%" cx="50%" cy="50%"></circle>
+                        <circle class="chart chart-hours" r="50%" cx="50%" cy="50%" stroke-dasharray="100 100"></circle>
                     </svg>
                 </div>
             </div>
@@ -86,8 +86,8 @@
                 <span class="time-count__text">минут</span>
                 <div class="count-round">
                     <svg viewBox="0 0 64 64" class="pie">
-                        <circle class="background" r="25%" cx="50%" cy="50%"></circle>
-                        <circle class="chart chart-minutes" r="25%" cx="50%" cy="50%" stroke-dasharray="100 100"></circle>
+                        <circle class="background" r="50%" cx="50%" cy="50%"></circle>
+                        <circle class="chart chart-minutes" r="50%" cx="50%" cy="50%" stroke-dasharray="100 100"></circle>
                     </svg>
                 </div>
             </div>
@@ -97,14 +97,137 @@
                 <div class="count-line progress-seconds"></div>
                 <div class="count-round">
                     <svg viewBox="0 0 64 64" class="pie">
-                        <circle class="background" r="25%" cx="50%" cy="50%"></circle>
-                        <circle class="chart chart-seconds" r="25%" cx="50%" cy="50%" stroke-dasharray="100 100"></circle>
+                        <circle class="background" r="50%" cx="50%" cy="50%"></circle>
+                        <circle class="chart chart-seconds" r="50%" cx="50%" cy="50%" stroke-dasharray="100 100"></circle>
                     </svg>
                 </div>
             </div>
             </div>
         </div>
         <button class="action-info__button desk_hide btn" data-fancybox data-src="#callBack">ПОЛУЧИТЬ ПРЕДЛОЖЕНИЕ</button>
+      </div>
+    </div>
+  </section>
+  <section class="models">
+    <div class="container">
+      <div class="section__upper">
+        <h2 class="section__title models__title">модельный ряд</h2>
+      </div>
+      <div class="models__list">
+        <div class="models__list-item">
+          <div class="models__list-item-top desk_hide">
+            <span class="models__list-item-head">chery tiggo 4 pro</span>
+            <span class="models__list-item-number">
+              <img src="./img/car-number.svg" alt="car"> 
+              <span>16 авто</span>
+            </span>
+          </div>
+          <div class="models__list-item-flex">
+            <div class="models__list-item-img">
+              <div class="models__list-item-ball"></div>
+              <img class="models__list-item-line" src="./img/line-card.svg" alt="line">
+              <img class="models__img" src="./img/car-test.png" alt="car">
+            </div>
+            <div class="models__list-images">
+              <a href="./img/cars/74-1.webp" data-fancybox="74" class="models__link-img">
+                <img src="./img/cars/74-1.webp" alt="car">
+              </a>
+              <a href="./img/cars/74-2.webp" data-fancybox="74" class="models__link-img">
+                <img src="./img/cars/74-2.webp" alt="car">
+              </a>
+              <a href="./img/cars/74-3.webp" data-fancybox="74" class="models__link-img">
+                <img src="./img/cars/74-3.webp" alt="car">
+              </a>
+              <a href="./img/cars/74-4.webp" data-fancybox="74" class="models__link-img">
+                <img src="./img/cars/74-4.webp" alt="car">
+              </a>
+            </div>
+            <div class="models__list-item-info">
+              <div class="models__list-item-top mob_hide">
+                <span class="models__list-item-head">chery tiggo 4 pro</span>
+                <span class="models__list-item-number"><img src="./img/car-number.svg" alt="car"> 16 авто</span>
+              </div>
+              <ul class="models__list-item-stocks">
+                <li class="models__list-item-stocks-el"><span>Первоначальный взнос <b> от 0%</b></span></li>
+                <li class="models__list-item-stocks-el"><span>Рассрочка <b> 0% </b> 0% или кредит <b> от 4,9%</b></span></li>
+                <li class="models__list-item-stocks-el"><span>Скидка по госпрограммам <b> до 20%</b></span></li>
+                <li class="models__list-item-stocks-el"><span>Бонус по трейд-ин <b> до 300 000 ₽</b></span></li>
+                <li class="models__list-item-stocks-el"><span><b>5 лет гарантии </b> или 150 000 км пробега</span></li>
+              </ul>
+              <div class="models__list-item-price">
+                <div class="models__list-item-price-flex">
+                  <span class="models__list-item-price-credit">платеж по кредиту</span>
+                  <span class="models__list-item-price-credit text_no_uppercase">от 5 900 ₽/мес.</span>
+                </div>
+                <div class="models__list-item-price-flex">
+                  <span class="models__list-item-price-text">цена по акции</span>
+                  <span class="models__list-item-price-text text_no_uppercase">от 1 175 900 ₽</span>
+                </div>
+              </div>
+              <div class="models__list-item-btns">
+                <button class="models__list-item-button btn js--popup-btn" data-carbrand="Chery" data-carmodel="{{model.title}}" data-carequipement="{{equipement.title}}" data-fancybox data-src="#popupCredit">купить в кредит</button>
+                <button class="models__list-item-button btn js--popup-btn" data-carbrand="Chery" data-carmodel="{{model.title}}" data-carequipement="{{equipement.title}}" data-fancybox data-src="#popupSpecial">получить предложение</button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="models__list-item">
+          <div class="models__list-item-top desk_hide">
+            <span class="models__list-item-head">chery tiggo 4 pro</span>
+            <span class="models__list-item-number">
+              <img src="./img/car-number.svg" alt="car"> 
+              <span>16 авто</span>
+            </span>
+          </div>
+          <div class="models__list-item-flex">
+            <div class="models__list-item-img">
+              <div class="models__list-item-ball"></div>
+              <img class="models__list-item-line" src="./img/line-card.svg" alt="line">
+              <img class="models__img" src="./img/74.webp" alt="car">
+            </div>
+            <div class="models__list-images">
+              <a href="./img/cars/74-1.webp" data-fancybox="74" class="models__link-img">
+                <img src="./img/cars/74-1.webp" alt="car">
+              </a>
+              <a href="./img/cars/74-2.webp" data-fancybox="74" class="models__link-img">
+                <img src="./img/cars/74-2.webp" alt="car">
+              </a>
+              <a href="./img/cars/74-3.webp" data-fancybox="74" class="models__link-img">
+                <img src="./img/cars/74-3.webp" alt="car">
+              </a>
+              <a href="./img/cars/74-4.webp" data-fancybox="74" class="models__link-img">
+                <img src="./img/cars/74-4.webp" alt="car">
+              </a>
+            </div>
+            <div class="models__list-item-info">
+              <div class="models__list-item-top mob_hide">
+                <span class="models__list-item-head">chery tiggo 4 pro</span>
+                <span class="models__list-item-number"><img src="./img/car-number.svg" alt="car"> 16 авто</span>
+              </div>
+              <ul class="models__list-item-stocks">
+                <li class="models__list-item-stocks-el"><span>Первоначальный взнос <b> от 0%</b></span></li>
+                <li class="models__list-item-stocks-el"><span>Рассрочка <b> 0% </b> 0% или кредит <b> от 4,9%</b></span></li>
+                <li class="models__list-item-stocks-el"><span>Скидка по госпрограммам <b> до 20%</b></span></li>
+                <li class="models__list-item-stocks-el"><span>Бонус по трейд-ин <b> до 300 000 ₽</b></span></li>
+                <li class="models__list-item-stocks-el"><span><b>5 лет гарантии </b> или 150 000 км пробега</span></li>
+              </ul>
+              <div class="models__list-item-price">
+                <div class="models__list-item-price-flex">
+                  <span class="models__list-item-price-credit">платеж по кредиту</span>
+                  <span class="models__list-item-price-credit text_no_uppercase">от 5 900 ₽/мес.</span>
+                </div>
+                <div class="models__list-item-price-flex">
+                  <span class="models__list-item-price-text">цена по акции</span>
+                  <span class="models__list-item-price-text text_no_uppercase">от 1 175 900 ₽</span>
+                </div>
+              </div>
+              <div class="models__list-item-btns">
+                <button class="models__list-item-button btn js--popup-btn" data-carbrand="Chery" data-carmodel="{{model.title}}" data-carequipement="{{equipement.title}}" data-fancybox data-src="#popupCredit">купить в кредит</button>
+                <button class="models__list-item-button btn js--popup-btn" data-carbrand="Chery" data-carmodel="{{model.title}}" data-carequipement="{{equipement.title}}" data-fancybox data-src="#popupSpecial">получить предложение</button>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </section>
