добавил новые блоки

--- a/index.html
+++ b/index.html
@@ -231,6 +231,80 @@
       </div>
     </div>
   </section>
+  <section class="equip">
+    <div class="container">
+      <div class="section__upper">
+        <h2 class="section__title equip__title">комплектации</h2>
+        <h3 class="section__sub-title equip__sub-title">быстрый подбор авто по параметрам</h3>
+      </div>
+      <div class="equip__filter">
+        <div class="equip__filter-select">
+          <select class="js--models" name="param1" id="">
+            <option value="">модель</option>
+            <option value="Chery">Chery</option>
+            <option value="Chery">Chery</option>
+          </select>
+        </div>
+        <div class="equip__filter-select">
+          <select name="" id="">
+            <option value="">комплектация</option>
+            <option value="Chery">Chery</option>
+            <option value="Chery">Chery</option>
+          </select>
+        </div>
+      </div>  
+        <div class="equip__list">
+          <div class="equip__card">
+            <div class="equip__card-img">
+              <img src="./img/equip-test.png" alt="car">
+            </div>
+            <div class="equip__card-info">
+              <div class="equip__card-text">
+                <span class="equip__card-model">jolion</span>
+                <span>Comfort</span>
+                <span class="equip__card-name">1.5Т (177 л.с.) 4WD 7DCT</span>
+                <span>Полный</span>
+              </div>
+              <div class="equip__card-btns">
+                <button class="equip__card-button btn_bg_black btn">кредит от ХХ ХХХ ₽/мес.</button>
+                <button class="equip__card-button btn_bg_gray btn">получить предложение</button>
+              </div>
+            </div>
+          </div>
+          <div class="equip__card">
+            <div class="equip__card-img">
+              <img src="./img/equip-test.png" alt="car">
+            </div>
+            <div class="equip__card-info">
+              <div class="equip__card-text">
+                <span class="equip__card-model">jolion</span>
+                <span>Comfort</span>
+                <span class="equip__card-name">1.5Т (177 л.с.) 4WD 7DCT</span>
+                <span>Полный</span>
+              </div>
+              <div class="equip__card-btns">
+                <button class="equip__card-button btn_bg_black btn">кредит от ХХ ХХХ ₽/мес.</button>
+                <button class="equip__card-button btn_bg_gray btn">получить предложение</button>
+              </div>
+            </div>
+          </div>
+        </div>
+    </div>
+  </section>
+  <section class="trade">
+    <div class="section__upper">
+      <h2 class="section__title trade__title">trade-in</h2>
+      <h3 class="section__sub-title trade__sub-title">обменяй автомобиль выгодно</h3>
+    </div>
+  </section>
+  <section class="contacts">
+    <div class="container">
+      <div class="section__upper">
+        <h2 class="section__title contacts__title">контакты</h2>
+        <h3 class="section__sub-title contacts__sub-title">остались вопросы? оставьте заявку</h3>
+      </div>
+    </div>
+  </section>
     <script src="./libs/jquery.min.js"></script>
     <script src="./libs/masked-input.min.js"></script>
     <script src="./libs/fancybox.min.js"></script>
