--- a/index.html
+++ b/index.html
@@ -19,9 +19,29 @@
       href="./css/desk-style.css"
       media="(min-width: 1025px)"
     />
-    <title>Landing page</title>
+    <title>EXEED</title>
 </head>
 <body>
+  <header class="header">
+    <div class="container">
+      <div class="header-container">
+        <div class="header-btn mob_hide">
+          <button class="header__button">обратный звонок</button>
+        </div>
+        <div class="header-logo">
+          <picture>
+            <source srcset="./img/logo_mob.svg"
+                    media="(max-width: 1024px)">
+                    <img class="header__img" src="./img/logo.svg" alt="logo">
+        </picture>
+        </div>
+        <div class="header-info">
+          <a href="tel:" class="header-info__text">+7 (910) 000-00-00</a>
+          <span class="header-info__text">Москва, МКАД, 27-й км, вл1, стр1</span>
+        </div>
+      </div>
+    </div>
+  </header>
     <script src="./libs/jquery.min.js"></script>
     <script src="./libs/masked-input.min.js"></script>
     <script src="./libs/fancybox.min.js"></script>
