--- a/index.html
+++ b/index.html
@@ -26,14 +26,15 @@
     <div class="container">
       <div class="header-container">
         <div class="header-btn mob_hide">
-          <button class="header__button">обратный звонок</button>
+          <button class="header__button btn bg_gold_color">обратный звонок</button>
         </div>
         <div class="header-logo">
-          <picture>
+          <!-- <picture>
             <source srcset="./img/logo_mob.svg"
                     media="(max-width: 1024px)">
                     <img class="header__img" src="./img/logo.svg" alt="logo">
-        </picture>
+        </picture> -->
+          <img class="header__img" src="./img/logo.svg" alt="logo">
         </div>
         <div class="header-info">
           <a href="tel:" class="header-info__text">+7 (910) 000-00-00</a>
@@ -42,6 +43,9 @@
       </div>
     </div>
   </header>
+  <section class="main-banner">
+    <div class="container"></div>
+  </section>
     <script src="./libs/jquery.min.js"></script>
     <script src="./libs/masked-input.min.js"></script>
     <script src="./libs/fancybox.min.js"></script>
