--- a/index.html
+++ b/index.html
@@ -44,12 +44,71 @@
     </div>
   </header>
   <section class="main-banner">
-    <div class="container"></div>
+    <div class="container">
+      <div class="main-banner__text">
+        <h1 class="main-banner__title">снижаем цены на exeed</h1>
+        <span class="main-banner__sub-title">финальная акция на авто в наличии</span>
+      </div>
+      <div class="main-banner__container">
+        <button class="main-banner__button btn bg_gold_color">получить предложение</button>
+        <div class="main-banner__time">
+          <div class="main-banner__time-text">
+            <span class="main-banner__time-price">снижаем цены</span>
+            <span class="main-banner__time-action">по акции до</span>
+          </div>
+          <div class="timer">
+            <div class="time-count__item time-count__days">
+                <div class="time-count__val">00</div>
+                <span class="time-count__text">дней</span>
+                <div class="count-line progress-days"></div>
+                <div class="count-round">
+                    <svg viewBox="0 0 64 64" class="pie">
+                        <circle class="background" r="50%" cx="50%" cy="50%"></circle>
+                        <circle class="chart chart-days" r="50%" cx="50%" cy="50%" stroke-dasharray="100 100"></circle>
+                    </svg>
+                </div>
+            </div>
+            <div class="time-count__item time-count__hours">
+                <div class="time-count__val">00</div>
+                <span class="time-count__text">часов</span>
+                <div class="count-round">
+                    <svg viewBox="0 0 64 64" class="pie">
+                        <circle class="background" r="50%" cx="50%" cy="50%"></circle>
+                        <circle class="chart chart-hours" r="50%" cx="50%" cy="50%" stroke-dasharray="100 100"></circle>
+                    </svg>
+                </div>
+            </div>
+            <div class="time-count__item time-count__minutes">
+                <div class="time-count__val">00</div>
+                <span class="time-count__text">минут</span>
+                <div class="count-round">
+                    <svg viewBox="0 0 64 64" class="pie">
+                        <circle class="background" r="50%" cx="50%" cy="50%"></circle>
+                        <circle class="chart chart-minutes" r="50%" cx="50%" cy="50%" stroke-dasharray="100 100"></circle>
+                    </svg>
+                </div>
+            </div>
+            <div class="time-count__item time-count__seconds">
+                <div class="time-count__val">00</div>
+                <span class="time-count__text">секунд</span>
+                <div class="count-line progress-seconds"></div>
+                <div class="count-round">
+                    <svg viewBox="0 0 64 64" class="pie">
+                        <circle class="background" r="50%" cx="50%" cy="50%"></circle>
+                        <circle class="chart chart-seconds" r="50%" cx="50%" cy="50%" stroke-dasharray="100 100"></circle>
+                    </svg>
+                </div>
+            </div>
+            </div>
+        </div>
+      </div>
+    </div>
   </section>
     <script src="./libs/jquery.min.js"></script>
     <script src="./libs/masked-input.min.js"></script>
     <script src="./libs/fancybox.min.js"></script>
     <script src="./libs/select2.js"></script>
+    <script src="./js/timer.js"></script>
     <script src="./js/main.js"></script>
 </body>
 </html>
