--- a/index.html
+++ b/index.html
@@ -104,11 +104,264 @@
       </div>
     </div>
   </section>
+  <section class="models">
+    <div class="section__upper models__upper">
+      <h2 class="section__title models__title">модельный ряд</h2>
+    </div>
+    <div class="container">
+      <div class="models__list">
+        <div class="models__card">
+          <div class="models__card-info">
+            <span class="models__card-head">lx</span>
+            <span class="models__card-number">В наличии: <b>16 авто</b></span>
+            <div class="models__colors-container">
+                  <!-- <div class="color-select"> -->
+                          <!-- <span class="{{ $loop->index === 0 ? 'color-active' : '' }}"
+                              data-color="{{ $loop->index + 1 }}"
+                              data-colorName="{{ $media['galery_colors'][$keyColorMax]['name'] }}"
+                              style="background: ;">
+                          </span> -->
+                          <div class="color-select">
+                              <span class="models__card-color color-active"
+                              data-color="0"
+                              data-model="523"
+                              data-colorName=""
+                              style="background: #000;">
+                            </span>
+                          </div>
+                          <div class="color-select">
+                            <span class="models__card-color"
+                            data-color="1"
+                            data-model="523"
+                            data-colorName=""
+                            style="background: red;">
+                          </span>
+                          </div>
+                          <div class="color-select">
+                            <span class="models__card-color"
+                            data-color="2"
+                            data-model="523"
+                            data-colorName=""
+                            style="background: blue;">
+                          </span>
+                          </div>
+                  <!-- </div> -->
+            </div>
+            <div class="models__card-benefit">
+              <span>ваша выгода</span>
+              <span>до 584 900</span>
+            </div>
+          </div>
+          <div class="models__card-img">
+            <img class="card__img js-active" data-model="523" data-index="0" class="models__swiper-img" src="./img/model-test.png" alt="">
+            <img class="card__img" data-model="523" data-index="1" class="models__swiper-img" src="./img/model-test.png" alt="">
+            <img class="card__img" data-model="523" data-index="2" class="models__swiper-img" src="./img/model-test.png" alt="">
+              <!-- <div class="swiper-slide">
+                <img class="models__swiper-img" src="./img/model-test.png" alt="">
+              </div>
+              <div class="swiper-slide">
+                <img class="models__swiper-img" src="./img/model-test.png" alt="">
+              </div>
+              <div class="swiper-slide">
+                <img class="models__swiper-img" src="./img/model-test.png" alt="">
+              </div> -->
+          </div>
+          <div class="models__card-images">
+            <a href="./img/prev-test-2.png" data-fancybox="523" class="models__card-link-img">
+              <img src="./img/prev-test-2.png" alt="" class="models__card-prev">
+            </a>
+            <a href="./img/prev-test-2.png" data-fancybox="523" class="models__card-link-img">
+              <img src="./img/prev-test-2.png" alt="" class="models__card-prev">
+            </a>
+            <a href="./img/prev-test-2.png" data-fancybox="523" class="models__card-link-img">
+              <img src="./img/prev-test-2.png" alt="" class="models__card-prev">
+            </a>
+            <a href="./img/prev-test-2.png" data-fancybox="523" class="models__card-link-img">
+              <img src="./img/prev-test-2.png" alt="" class="models__card-prev">
+            </a>
+          </div>
+          <div class="models__card-action">
+            <ul class="models__card-list">
+              <li class="models__card-item"><span>Ставка от <b> 4,9% годовых</b></span></li>
+              <li class="models__card-item"><span>Можно в рассрочку <b> за 0%</b></span></li>
+              <li class="models__card-item"><span>Гарантия <b> 150 000 км</b></span></li>
+            </ul>
+            <div class="models__card-action-info">
+              <div class="models__card-credit">
+                <span>платёж по кредиту</span>
+                <span class="models__card-credit_big_size">от 5 900 ₽/мес.</span>
+              </div>
+              <div class="models__card-price">
+                <span>цена по акции</span>
+                <span class="models__card-price_big_size">от 1 175 900 ₽</span>
+              </div>
+              <div class="models__card-btns">
+                <button class="models__card-button btn bg_gold_color">купить в кредит</button>
+                <button class="models__card-button btn bg_gold_color">получить предложение</button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="models__card">
+          <div class="models__card-info">
+            <span class="models__card-head">lx</span>
+            <span class="models__card-number">В наличии: <b>16 авто</b></span>
+            <div class="models__colors-container">
+                  <!-- <div class="color-select"> -->
+                          <!-- <span class="{{ $loop->index === 0 ? 'color-active' : '' }}"
+                              data-color="{{ $loop->index + 1 }}"
+                              data-colorName="{{ $media['galery_colors'][$keyColorMax]['name'] }}"
+                              style="background: ;">
+                          </span> -->
+                          <div class="color-select">
+                            <span class="models__card-color color-active"
+                            data-color="0"
+                            data-model="520"
+                            data-colorName=""
+                            style="background: #000;">
+                          </span>
+                        </div>
+                        <div class="color-select">
+                          <span class="models__card-color"
+                          data-color="1"
+                          data-model="520"
+                          data-colorName=""
+                          style="background: red;">
+                        </span>
+                        </div>
+                        <div class="color-select">
+                          <span class="models__card-color"
+                          data-color="2"
+                          data-model="520"
+                          data-colorName=""
+                          style="background: blue;">
+                        </span>
+                        </div>
+                  <!-- </div> -->
+            </div>
+            <div class="models__card-benefit">
+              <span>ваша выгода</span>
+              <span>до 584 900</span>
+            </div>
+          </div>
+          <div class="models__card-img">
+            <img class="card__img js-active" data-model="520" data-index="0" class="models__swiper-img" src="./img/model-test.png" alt="">
+            <img class="card__img" data-model="520" data-index="1" class="models__swiper-img" src="./img/model-test.png" alt="">
+            <img class="card__img" data-model="520" data-index="2" class="models__swiper-img" src="./img/model-test.png" alt="">
+          </div>
+          <div class="models__card-images">
+            <a href="./img/prev-test-2.png" data-fancybox="523" class="models__card-link-img">
+              <img src="./img/prev-test-2.png" alt="" class="models__card-prev">
+            </a>
+            <a href="./img/prev-test-2.png" data-fancybox="523" class="models__card-link-img">
+              <img src="./img/prev-test-2.png" alt="" class="models__card-prev">
+            </a>
+            <a href="./img/prev-test-2.png" data-fancybox="523" class="models__card-link-img">
+              <img src="./img/prev-test-2.png" alt="" class="models__card-prev">
+            </a>
+            <a href="./img/prev-test-2.png" data-fancybox="523" class="models__card-link-img">
+              <img src="./img/prev-test-2.png" alt="" class="models__card-prev">
+            </a>
+          </div>
+          <div class="models__card-action">
+            <ul class="models__card-list">
+              <li class="models__card-item"><span>Ставка от <b> 4,9% годовых</b></span></li>
+              <li class="models__card-item"><span>Можно в рассрочку <b> за 0%</b></span></li>
+              <li class="models__card-item"><span>Гарантия <b> 150 000 км</b></span></li>
+            </ul>
+            <div class="models__card-action-info">
+              <div class="models__card-credit">
+                <span>платёж по кредиту</span>
+                <span class="models__card-credit_big_size">от 5 900 ₽/мес.</span>
+              </div>
+              <div class="models__card-price">
+                <span>цена по акции</span>
+                <span class="models__card-price_big_size">от 1 175 900 ₽</span>
+              </div>
+              <div class="models__card-btns">
+                <button class="models__card-button btn bg_gold_color">купить в кредит</button>
+                <button class="models__card-button btn bg_gold_color">получить предложение</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="equip">
+    <div class="section__upper equip__upper">
+      <h2 class="section__title equip__title">комплектации</h2>
+    </div>
+    <div class="container">
+      <div class="equip__filter">
+        <div class="equip__select">
+          <select name="" id="">
+            <option value="">Модель</option>
+            <option value="Exeed">Exeed</option>
+            <option value="Exeed">Exeed</option>
+          </select>
+        </div>
+        <div class="equip__select">
+          <select name="" id="">
+            <option value="">Комплектация</option>
+            <option value="Exeed">Exeed</option>
+            <option value="Exeed">Exeed</option>
+          </select>
+        </div>
+        <div class="equip__select">
+          <select name="" id="">
+            <option value="">Тип привода</option>
+            <option value="Exeed">Exeed</option>
+            <option value="Exeed">Exeed</option>
+          </select>
+        </div>
+      </div>
+      <div class="equip__list">
+        <div class="equip__card">
+          <div class="equip__card-img">
+            <img src="./img/equip-test.png" alt="" class="equip__card-images">
+          </div>
+          <div class="equip__card-info">
+            <span class="equip__card-head">txl</span>
+            <span class="equip__card-name">Comfort</span>
+            <span class="equip__card-spec">1.5Т (177 л.с.) 4WD 7DCT</span>
+            <span class="equip__card-drive">Полный</span>
+            <button class="equip__card-button btn bg_white_color">получить предложение</button>
+          </div>
+        </div>
+        <div class="equip__card">
+          <div class="equip__card-img">
+            <img src="./img/equip-test.png" alt="" class="equip__card-images">
+          </div>
+          <div class="equip__card-info">
+            <span class="equip__card-head">txl</span>
+            <span class="equip__card-name">Comfort</span>
+            <span class="equip__card-spec">1.5Т (177 л.с.) 4WD 7DCT</span>
+            <span class="equip__card-drive">Полный</span>
+            <button class="equip__card-button btn bg_white_color">получить предложение</button>
+          </div>
+        </div>
+        <div class="equip__card">
+          <div class="equip__card-img">
+            <img src="./img/equip-test.png" alt="" class="equip__card-images">
+          </div>
+          <div class="equip__card-info">
+            <span class="equip__card-head">txl</span>
+            <span class="equip__card-name">Comfort</span>
+            <span class="equip__card-spec">1.5Т (177 л.с.) 4WD 7DCT</span>
+            <span class="equip__card-drive">Полный</span>
+            <button class="equip__card-button btn bg_white_color">получить предложение</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
     <script src="./libs/jquery.min.js"></script>
     <script src="./libs/masked-input.min.js"></script>
     <script src="./libs/fancybox.min.js"></script>
     <script src="./libs/select2.js"></script>
     <script src="./js/timer.js"></script>
+    <script src="./libs/swiper-bundle.min.js"></script>
     <script src="./js/main.js"></script>
 </body>
 </html>
