--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
     <div class="container">
       <div class="models__list">
         <div class="models__card">
+          <div class="models__card-line1"></div>
           <div class="models__card-info">
             <span class="models__card-head">lx</span>
             <span class="models__card-number">В наличии: <b>16 авто</b></span>
@@ -152,15 +153,6 @@
             <img class="card__img js-active" data-model="523" data-index="0" class="models__swiper-img" src="./img/model-test.png" alt="">
             <img class="card__img" data-model="523" data-index="1" class="models__swiper-img" src="./img/model-test.png" alt="">
             <img class="card__img" data-model="523" data-index="2" class="models__swiper-img" src="./img/model-test.png" alt="">
-              <!-- <div class="swiper-slide">
-                <img class="models__swiper-img" src="./img/model-test.png" alt="">
-              </div>
-              <div class="swiper-slide">
-                <img class="models__swiper-img" src="./img/model-test.png" alt="">
-              </div>
-              <div class="swiper-slide">
-                <img class="models__swiper-img" src="./img/model-test.png" alt="">
-              </div> -->
           </div>
           <div class="models__card-images">
             <a href="./img/prev-test-2.png" data-fancybox="523" class="models__card-link-img">
@@ -177,6 +169,7 @@
             </a>
           </div>
           <div class="models__card-action">
+            <div class="models__card-line2"></div>
             <ul class="models__card-list">
               <li class="models__card-item"><span>Ставка от <b> 4,9% годовых</b></span></li>
               <li class="models__card-item"><span>Можно в рассрочку <b> за 0%</b></span></li>
