--- a/index.html
+++ b/index.html
@@ -24,21 +24,28 @@
 <body>
   <header class="header">
     <div class="container">
-      <div class="header-container">
-        <div class="header-btn mob_hide">
-          <button class="header__button btn bg_gold_color">обратный звонок</button>
+      <div class="header__container">
+        <div class="header__logo">
+          <img src="./img/logo.svg" alt="logo" class="header__img">
         </div>
-        <div class="header-logo">
-          <!-- <picture>
-            <source srcset="./img/logo_mob.svg"
-                    media="(max-width: 1024px)">
-                    <img class="header__img" src="./img/logo.svg" alt="logo">
-        </picture> -->
-          <img class="header__img" src="./img/logo.svg" alt="logo">
+        <div class="burger">
+          <span class="burger__line"></span>
+          <span class="burger__line"></span>
+          <span class="burger__line"></span>
         </div>
-        <div class="header-info">
-          <a href="tel:" class="header-info__text">+7 (910) 000-00-00</a>
-          <span class="header-info__text">Москва, МКАД, 27-й км, вл1, стр1</span>
+        <div class="header__menu">
+          <nav class="header__nav">
+            <a href="#model" class="header__nav-link">модели</a>
+            <a href="#credits" class="header__nav-link">кредит</a>
+            <a href="#equipement" class="header__nav-link">комплектации</a>
+            <a href="#trade-in" class="header__nav-link">trade-in</a>
+            <a href="#contact" class="header__nav-link">контакты</a>
+          </nav>
+          <div class="header__info">
+            <a href="tel:" class="header__info-text">+7 (999) 999 99 99</a>
+            <span class="header__info-text">Режим работы: с 8:00 до 21:00</span>
+            <span class="header__info-text">Москва, 33км МКАД, 6с6</span>
+          </div>
         </div>
       </div>
     </div>
